[package]
name = "yup-hyper-mock"
version = "4.0.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Sebastian Thiel <byronimo@gmail.com>"]
description = "A utility library for testing clients using hyper"
repository = "https://github.com/Byron/yup-hyper-mock"
documentation = "http://byron.github.io/yup-hyper-mock"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[dependencies]
hyper = "0.13.1"
log = ">= 0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["io-driver", "io-util", "stream"] }
mio = "0.6"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["macros"] }
