[package]
name = "yup-hyper-mock"
version = "6.0.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Sebastian Thiel <byronimo@gmail.com>",
           "Benjamin Pannell <contact@sierrasoftworks.com>"]
description = "A utility library for testing clients using hyper"
repository = "https://github.com/Byron/yup-hyper-mock"
documentation = "http://byron.github.io/yup-hyper-mock"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "runtime", "stream"] }
log = ">= 0.4"
futures = "0.3"
tokio = { version = "1.0", features = ["io-util"] }
mio = "0.8"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "1.0", features = ["rt", "macros"] }
