[package]
name = "yup-hyper-mock"
version = "8.0.0"
authors = ["Sean McArthur <sean.monstar@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>",
           "Sebastian Thiel <byronimo@gmail.com>",
           "Benjamin Pannell <contact@sierrasoftworks.com>"]
description = "A utility library for testing clients using hyper"
repository = "https://github.com/Byron/yup-hyper-mock"
documentation = "http://byron.github.io/yup-hyper-mock"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
edition = "2021"

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.2", features = ["tokio", "http1", "client-legacy"] }
log = ">= 0.4"
futures = "0.3"
tokio = { version = "1.35", features = ["io-util"] }
tower-service = "0.3"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.0", features = ["rt", "macros"] }
